# ChangeLog for sys-libs/readline
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.116 2008/04/08 21:43:06 vapier Exp $

  08 Apr 2008; Mike Frysinger <vapier@gentoo.org>
  +files/readline-5.2-no-ignore-shlib-errors.patch,
  readline-5.2_p12-r1.ebuild:
  Dont ignore errors in the shlib subdir #216952 by Markus Ullmann.

  26 Feb 2008; Santiago M. Mola <coldwind@gentoo.org>
  readline-5.2_p12-r1.ebuild:
  amd64 stable wrt bug #211332

  26 Feb 2008; Brent Baude <ranger@gentoo.org> readline-5.2_p12-r1.ebuild:
  stable ppc, bug 211332

  26 Feb 2008; Brent Baude <ranger@gentoo.org> readline-5.2_p12-r1.ebuild:
  stable ppc64, bug 211332

  25 Feb 2008; Jeroen Roovers <jer@gentoo.org> readline-5.2_p12-r1.ebuild:
  Stable for HPPA (bug #211332).

  07 Feb 2008; Raúl Porcel <armin76@gentoo.org> readline-5.2_p12-r1.ebuild:
  alpha/ia64/sparc/x86 stable

*readline-5.2_p12-r1 (02 Jan 2008)

  02 Jan 2008; Mike Frysinger <vapier@gentoo.org>
  +readline-5.2_p12-r1.ebuild:
  Make sure we continue to always link against ncurses as reported by welp.

*readline-5.2_p12 (02 Jan 2008)

  02 Jan 2008; Mike Frysinger <vapier@gentoo.org> +readline-5.2_p12.ebuild:
  Version bump.

  29 Sep 2007; Jeroen Roovers <jer@gentoo.org> readline-5.2_p7.ebuild:
  Stable for HPPA (bug #194013).

  28 Sep 2007; nixnut <nixnut@gentoo.org> readline-5.2_p7.ebuild:
  Stable on ppc wrt bug 194013

  28 Sep 2007; Raúl Porcel <armin76@gentoo.org> readline-5.2_p7.ebuild:
  alpha/ia64/x86 stable wrt #194013

  28 Sep 2007; Ferris McCormick <fmccor@gentoo.org> readline-5.2_p7.ebuild:
  Sparc stable --- Bug #194013

  28 Sep 2007; Christoph Mende <angelos@gentoo.org> readline-5.2_p7.ebuild:
  Stable on amd64 wrt bug #194013

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> readline-5.2_p7.ebuild:
  Stable on mips, per #194013.

  27 Sep 2007; Brent Baude <ranger@gentoo.org> readline-5.2_p7.ebuild: