@@ -45,16 +45,18 @@ DIST readline52-009 1332 RMD160 fa94d1a7f2143a3689362add4fecbb6a7acaa60d SHA1 91
 DIST readline52-010 1543 RMD160 545ad0c5c5d87bfd5971a4d12b47bd75ad2f195f SHA1 98e6455c36f43c67be9529612c8e4550a8273c8b SHA256 83f8c1aadb86b1a2fad8821a9c6be72a8de5afd7fd9fde58a30b3b57d939693e
 DIST readline52-011 886 RMD160 96f9ae01b83cbca082956b0c7f88679483f32728 SHA1 d2d4cbaf85c7db1708a810fbb368e000ad81c18d SHA256 08ad3384ab0906e6fa4cc417eb8c43ff59375bcead15fd5c8e31730f0413b3d6
 DIST readline52-012 3870 RMD160 cf6ca8ced10d2e1a6cddefeb7871820f01c1f552 SHA1 3322f98db5845f40ae8e16ca1eb7e0e230bc5b8e SHA256 20f0243be2299c23213492cc2c19cfd15cc528d2b566a76a2de58306bb9e4c9e
+DIST readline52-013 5147 RMD160 a9d06dc1bef660882b5cff82728a8cd5bea47ff0 SHA1 fc4831d8f4dacd33293016fa6c5c84a13ac1c7e5 SHA256 0cc649516a5bdfa61c5e56937407570288b6972d75aa1bd060ad30ebe98144d5
 EBUILD readline-4.3-r5.ebuild 2425 RMD160 649a6c1e778d46395747bca2f2cf8e6a52e56db9 SHA1 ea411c19af7083351934c79e0fd09b0e1641d6ed SHA256 cbaa0be05784e163e907fd093e65057422d7b25c5234035b007407935e93269f
 EBUILD readline-5.0-r2.ebuild 2424 RMD160 5f596d5fb86fff53e1cb21fde5243681c4d09cab SHA1 521169f34d1f21831e4136dee3c6b31fbdb6d133 SHA256 81c09d3039ba27df3cee62cd254772c5914704ea484eaa6d10de39b279729d4c
 EBUILD readline-5.1_p4.ebuild 2801 RMD160 aeaf87696c8e457ab870062dd51289d016884f8a SHA1 93c474aa9cb108cb9e6ce8a76b182f313192b7fa SHA256 d77ccfa3fcb3ecf746ddbb4220f89f4c82b1c63c8a2a4643f3b2ebfc50572b4c
 EBUILD readline-5.2_p12-r1.ebuild 2733 RMD160 a098d35f886c199054105d4aa69d36fc200e6c1f SHA1 260317ba644fbe8be946c91daf0ea45afb5639c2 SHA256 138b0966ee76de881779a65b4d6acb1b228d2e8c6f12a92ef914b5f0c490f3df
-MISC ChangeLog 14899 RMD160 ca76d68c67d45c82829e7d2dbe3555107c5485dd SHA1 d15e9eb6db3ce43e28d59d6747f026881d04d97f SHA256 86f5e5f4dab512588dbb949c5ce3f98bf0258810b599ced6a8247ee39f170efa
+EBUILD readline-5.2_p13.ebuild 2742 RMD160 1834fbd0f8e0cf780406555b310fa320ad809c75 SHA1 b86331c0395a8f541405a079b3a6920fc84570da SHA256 84b240312115fdc4e64d2e98a72fe82d215def0475839020e2aa96c15764b817
+MISC ChangeLog 15056 RMD160 54d33e6f44025cc7543d4d1f60177bc3eeef19d8 SHA1 900359fb1f444672b733f38e737b9cd6ecc69646 SHA256 a67d0c04cd056134084615a391a938c9a5c7e0d45dba751a7485e7a9cae90d23
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.9 (GNU/Linux)
 
-iD8DBQFH++bwj9hvisErhMIRAiR/AJ9Cb//QsQqgTj+gqQg7IeZ0YUridQCgrVjE
-t1T0tDfYD0Mzx+N46UL6rzk=
-=TYXq
+iEYEARECAAYFAkkpn9AACgkQ67wieSYcaxcsRgCg4cIVxL/6gaoHv+HYAhXWKrPF
+t6gAoI0/qBwkA8per3HeDcbzFWwZXnBg
+=hljP
 -----END PGP SIGNATURE-----
